--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,14 +9,22 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.data:spring-data-mongodb"
 
-    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
+
+    implementation "org.hibernate:hibernate-validator:6.0.17.Final"
+    implementation "javax.validation:validation-api:2.0.1.Final"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
+
+
     api 'io.jsonwebtoken:jjwt-api:0.11.1'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.1'
     runtimeOnly('io.jsonwebtoken:jjwt-orgjson:0.11.1')
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.5.1"
+    testImplementation "io.mockk:mockk:1.9.3"
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
