--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,6 +6,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.data:spring-data-mongodb"
 
