--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,6 +7,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.data:spring-data-mongodb"
 
