--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 plugins {
     id 'org.jetbrains.kotlin.plugin.spring' version '1.3.61'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'org.springframework.boot' version '2.2.6.RELEASE'
 }
@@ -12,6 +13,10 @@ plugins {
 apply plugin: 'application'
 apply from: 'dependencies.gradle'
 apply from: 'jacoco.gradle'
+apply from: 'publish.gradle'
+
+group = gradle.ext.group
+version = gradle.ext.version
 
 mainClassName = 'lt.codedicted.egzaminai.backend.ApplicationKt'
 
