--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,6 +2,15 @@ repositories {
     mavenLocal()
     jcenter()
     maven { url "https://repo.spring.io/milestone" }
+    repositories {
+        maven {
+            url 's3://codedicted.s3-us-east-1.amazonaws.com'
+            credentials(AwsCredentials) {
+                accessKey awsCredentials.AWSAccessKeyId
+                secretKey awsCredentials.AWSSecretKey
+            }
+        }
+    }
 }
 
 dependencies {
