config, to launch project as a docker container

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ mainClassName = 'lt.codedicted.egzaminai.backend.ApplicationKt'
 
 defaultTasks 'run'
 
+shadowJar {
+    mergeServiceFiles('META-INF/spring.*')
+}
+
 test {
     useJUnitPlatform()
     testLogging {
